update detatils and fixed typo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Few words about me..</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 24 year old and working as a Software Developer in Bucharest, Romania.
+                    <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 24 years old and working as a Software Developer in Bucharest, Romania.
                       I am a communicative person and eager to learn new things.</p>
                 </div>
             </div>
@@ -111,9 +111,7 @@
                         <h3 class="h4 mb-2">Programming</h3>
                         <p class="text-muted mb-0">C#/.NET</p>
                         <p class="text-muted mb-0">Node.js</p>
-                        <p class="text-muted mb-0">Xamarin</p>
                         <p class="text-muted mb-0">Java/Python</p>
-                        <p class="text-muted mb-0">C/C++</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -131,7 +129,7 @@
                         <i class="fas fa-4x fa-file-code text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Web Development</h3>
                         <p class="text-muted mb-0">React.js/Material UI/Context API/Redux</p>
-                        <p class="text-muted mb-0">JavaScript</p>
+                        <p class="text-muted mb-0">JavaScript/Typescript</p>
                         <p class="text-muted mb-0">HTML/CSS</p>
                         <p class="text-muted mb-0">Bootstrap</p>
                     </div>
@@ -142,7 +140,7 @@
                         <h3 class="h4 mb-2">DevOps & Other tools</h3>
                         <p class="text-muted mb-0">Azure Devops</p>
                         <p class="text-muted mb-0">Azure KeyValut</p>
-                        <p class="text-muted mb-0">Azure ServiceBus</p>
+                        <p class="text-muted mb-0">Azure ServiceBus/RabbitMQ</p>
                         <p class="text-muted mb-0">Docker</p>
                         <p class="text-muted mb-0">GIT</p>
                         <p class="text-muted mb-0">CI/CD with Azure Pipeline/Heroku</p>
