--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <p>Faculty of Cybernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
                       <br>
                       <li>Oct 2019 - Jul 2021</li>
-                        <p> Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
+                        <p>Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
                       <br>
                       <h1>Experience</h1>
                         <hr class="divider my-4" />
@@ -155,16 +155,17 @@
       <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                  <h2 class="text-white mt-0">Personal Projects I worked on..</h2>
+                  <h2 class="text-white mt-0">Personal Projects I developed..</h2>
                   <hr class="divider light my-4" />
-                    <p>Take Notes App / Movie Blog </p>
-                    <p>REST APIs with .Net Core & Node.js for interacting with SQL and No-SQL databases</p>
-                    <p>Desktop application - Covid Tracker</p>
-                    <p>Web application - Covid Tracker</p>
-                    <p>Weather web application</p>
-                    <p>Desktop application - Students mangement system</p>
-                    <p>Mobile application developed with Xamarin for football team/players tracker</p>
-                    <p>Project management application with features as Kanban board, notifications support in Slack and much more</p>
+                  <ul class="projects-list">
+                        <li>Take Notes App / Movie Blog </li>
+                        <li>REST APIs with .Net Core & Node.js for interacting with SQL and No-SQL databases</li>
+                        <li>Web application - Covid Tracker</li>
+                        <li>Weather Check web application</li>
+                        <li>Desktop application - Students mangement system</li>
+                        <li>Mobile application developed with Xamarin for football team/players tracker</li>
+                        <li>Project management application with features lie Kanban board, backlog, overviews notifications support in Slack</li>
+                  </ul>
               </div>
           </div>
       </div>
@@ -194,10 +195,6 @@
                   <i class="fab fa-github fa-3x mb-3 text-muted"></i>
                   <a href="https://github.com/luciantr24" class="d-block">GitHub</a>
               </div>
-              <div class="col-lg-4 mr-auto text-center">
-                <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-                <a href="https://twitter.com/LucianT4" class="d-block">Twitter</a>
-            </div>
             </div>
         </div>
     </section>
