--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src = "scripts/analytics.js"></script>
-    <script src = "scripts/projects.custom.js"></script>
-    <script src = "scripts/technologies.custom.js"></script>
+    <script src = "scripts/skills_projects_script.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145860980-1"></script>
