fixed card height issue for mobile

--- a/index.html
+++ b/index.html
@@ -105,21 +105,23 @@
     <!-- Portfolio-->
     
     <section class="page-section bg-primary" id="PORTFOLIO">
-      <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-                  <h3 class="text-white mt-0">Personal projects I developed..</h3>
-                  <hr class="divider light my-4" />
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-8 text-center">
+                    <h3 class="text-white mt-0">Personal projects I developed...</h3>
+                    <hr class="divider light my-4" />
+                </div>
             </div>
-          </div>
-      </div>
-      <div class="row" id="projects_element"></div>
-    <div class="row justify-content-center">
-        <br/>
-    <h5 class="text-white mt-0">Check out my 
-        <a href="https://github.com/luciantr24" style="background-color: black;">GitHub</a> for more projects
-    </h5>
-    </div>
+        <div class="row" id="projects_element"></div>
+        <div class="row justify-content-center">
+            <div class="col-sm-8 text-center">
+                <hr class="divider light my-4" />
+                <h5 class="text-white mt-0">Check out my
+                    <a href="https://github.com/luciantr24" style="background-color: black;">GitHub</a> for more projects
+                </h5>
+            </div>
+        </div>
+        </div>
   </section>
 
     <!-- Contact-->
