--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
-    </div>
-    <div class="theme-btn" onclick="setThemeModeInLocalStorage()">
-      <i class="fas fa-adjust"></i>
+      <div class="control-theme-btn" onclick="setThemeModeInLocalStorage()">
+        <i class="fas fa-adjust"></i>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
