added tooltip for nav items

--- a/index.html
+++ b/index.html
@@ -414,19 +414,23 @@
     </main>
 
     <div class="controls">
-      <div class="control active-btn" data-id="home">
+      <div class="control active-btn" data-id="home" title="Home">
         <i class="fas fa-home"></i>
       </div>
-      <div class="control" data-id="about">
+      <div class="control" data-id="about" title="About me">
         <i class="fas fa-user"></i>
       </div>
-      <div class="control" data-id="blogs">
+      <div class="control" data-id="blogs" title="My Projects">
         <i class="far fa-newspaper"></i>
       </div>
-      <div class="control" data-id="contact">
+      <div class="control" data-id="contact" title="Contact">
         <i class="fas fa-envelope-open"></i>
       </div>
-      <div class="control-theme-btn" onclick="setThemeModeInLocalStorage()">
+      <div
+        class="control-theme-btn"
+        onclick="setThemeModeInLocalStorage()"
+        title="Change theme"
+      >
         <i class="fas fa-adjust"></i>
       </div>
     </div>
