updated technologies for password project

--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
               <img src="assets/password.png" alt="" />
               <div class="blog-text">
                 <h4>Password Manager</h4>
-                <p>Developed using Electron for React.</p>
+                <p>Developed using Power Apps and Dataverse.</p>
                 <hr />
-                <p>Electron | React | Redux</p>
+                <p>PowerApps | Dataverse</p>
               </div>
             </div>
             <div class="blog">
@@ -407,6 +407,8 @@
                   <span class="btn-text">Send me an email</span>
                 </a>
               </div>
+              <br />
+              <br />
               <br />
               <br />
             </div>
