--- a/index.html
+++ b/index.html
@@ -263,6 +263,22 @@
           <h4 class="stat-title">Few personal projects I developed.</h4>
           <div class="blogs">
             <div class="blog">
+              <img src="assets/wishesx.png" alt="" />
+              <div class="blog-text">
+                <h4>
+                  <a href="https://wishesx.netlify.app/" target="_blank"
+                    >Wishesx</a
+                  >
+                </h4>
+                <p>
+                  Send online congratulations/wish cards to your friends and
+                  family.
+                </p>
+                <hr />
+                <p>React | Redux</p>
+              </div>
+            </div>
+            <div class="blog">
               <img src="assets/pluto.png" alt="" />
               <div class="blog-text">
                 <h4>Pluto - Project Management Tool [web]</h4>
